--- a/pairs/index.html
+++ b/pairs/index.html
@@ -7,7 +7,6 @@
 <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Ctext y='50' x='6' font-size='48'%3E🌕%3C/text%3E%3C/svg%3E">
 <meta name="color-scheme" content="dark light">
 <style>
-  /* ===== Pepper-Black tokens ===== */
   :root{
     --pepper:#0a0b0c; --char:#101214; --ink:#f1f2f3; --muted:#8e98a3;
     --line: color-mix(in oklab, var(--ink) 12%, transparent);
@@ -23,12 +22,10 @@
     }
   }
   *{box-sizing:border-box}
-  html,body{height:100%}
-  body{margin:0;background:var(--pepper);color:var(--ink);
-    font:500 15px/1.45 ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,Inter,Helvetica,Arial}
+  body{margin:0;background:var(--pepper);color:var(--ink);font:500 15px/1.45 ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,Inter,Helvetica,Arial}
   .sitebar{position:sticky;top:0;z-index:10;background:linear-gradient(180deg,color-mix(in oklab,var(--char) 92%,transparent),var(--char));border-bottom:1px solid var(--line);padding:10px 16px}
   .nav{max-width:1120px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;gap:12px}
-  .brand{display:flex;align-items:center;gap:10px;font-weight:800;letter-spacing:.2px}
+  .brand{display:flex;align-items:center;gap:10px;font-weight:800}
   .brand .dot{inline-size:9px;block-size:9px;border-radius:50%;background:var(--accent)}
   .links{display:flex;gap:10px;flex-wrap:wrap}
   .link{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:999px;border:1px solid var(--ring);background:var(--char);color:var(--ink);text-decoration:none;font-weight:600}
@@ -57,19 +54,14 @@
   .hint{color:var(--muted);font-size:12px}
   .log{display:grid;gap:12px}
   .entry{border:1px dashed var(--ring);border-radius:12px;padding:10px}
-  .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
   footer{border-top:1px solid var(--line);padding:14px 16px;color:var(--muted)}
   .foot{max-width:1120px;margin:0 auto;display:flex;justify-content:space-between;gap:12px;flex-wrap:wrap}
-
-  /* ===== Print notebook spread ===== */
   @media print{
-    :root{--pad:12px}
     body{background:#fff;color:#000}
-    .sitebar, footer, #theme, #viewMatrix, #viewSpiral, #jumpTester, .legend, .badge {display:none !important}
+    .sitebar, footer, #theme, #viewMatrix, #viewSpiral, #jumpTester, #printView, #printMatrix, .legend, .badge {display:none !important}
     main{max-width:100%;margin:0;padding:0}
     .card{border:0;border-radius:0;padding:0}
     #tester{page-break-before:always}
-    /* two-column spread for tester results */
     .log{display:grid;grid-template-columns:1fr 1fr;gap:12px}
     .entry{border:1px solid #000}
     .stage{aspect-ratio:auto;min-height:0}
@@ -78,14 +70,11 @@
 </style>
 </head>
 <body>
-
-<!-- ===== Header ===== -->
 <div class="sitebar">
-  <nav class="nav" aria-label="Primary">
+  <nav class="nav">
     <div class="brand"><span class="dot"></span><span>PLNT · Tunes</span></div>
     <div class="links">
       <a class="link" href="/" title="Home">Home</a>
-      <a class="link" href="/#playlists" title="Playlists">Playlists</a>
       <a class="link" href="/pairs/" aria-current="page" title="Pairs">Pairs</a>
     </div>
   </nav>
@@ -98,6 +87,8 @@
       <button id="viewSpiral" data-on="1" aria-pressed="true">Spiral</button>
       <button id="viewMatrix" aria-pressed="false">Matrix</button>
       <a id="jumpTester" href="#tester" class="link" style="padding:8px 12px">Tester</a>
+      <button id="printView">Print</button>
+      <button id="printMatrix">Print Spread (Matrix)</button>
       <select id="theme">
         <option value="auto">Theme: Auto</option>
         <option value="light">Theme: Light</option>
@@ -124,7 +115,7 @@
     <div style="overflow:auto"><table id="matrixTable"></table></div>
   </section>
 
-  <!-- Prefilled Tester -->
+  <!-- Prefilled Two-Track Tester -->
   <section id="tester" class="card">
     <h2 style="margin:0 0 8px">Two-Track Anchor Tester (Prefilled)</h2>
     <div class="grid2">
@@ -153,7 +144,6 @@
       <div class="meter"><label for="light" style="min-width:90px">Lightness</label><input id="light" type="range" min="0" max="10" value="6"><span id="lightVal">6</span></div>
     </div>
     <textarea id="testerNotes" placeholder="What shifted? Did Release lock Ignition or wash it out?"></textarea>
-
     <div class="row" style="justify-content:space-between;margin-top:8px">
       <span class="hint">Session log saves privately on this device.</span>
       <div class="row">
@@ -166,7 +156,6 @@
         <button id="clearLog">Clear Log</button>
       </div>
     </div>
-
     <div class="log" id="log" style="margin-top:12px"></div>
   </section>
 
@@ -187,12 +176,12 @@
 <footer>
   <div class="foot">
     <div>PLNT · Tunes — Pairs</div>
-    <div class="hint">Illumina cycles • pepper-black theme • print for notebook spreads</div>
+    <div class="hint">Print-ready via buttons or Cmd/Ctrl-P</div>
   </div>
 </footer>
 
 <script>
-/* ===== Data ===== */
+/* ===== Data (archetypes + pair ratings) ===== */
 var nodes = [
   {id:"sabrina", label:"Sabrina 🍯", short:"Sabrina"},
   {id:"janet",   label:"Janet 🌙",   short:"Janet"},
@@ -349,7 +338,6 @@ exportBtn.addEventListener("click", function(){
   var ts=new Date().toISOString().split("T")[0];
   a.download="illumina_pairs_sessions_"+ts+".json";
   document.body.appendChild(a); a.click(); a.remove();
-  URL.revokeObjectURL(a.href);
 });
 
 /* Import from JSON file */
@@ -360,7 +348,7 @@ importFile.addEventListener("change", function(){
     try{
       var incoming=JSON.parse(reader.result||"[]");
       var current=JSON.parse(localStorage.getItem("illumina_sessions")||"[]");
-      var merged=[].concat(incoming, current);     // prepend imported
+      var merged=[].concat(incoming, current);
       localStorage.setItem("illumina_sessions", JSON.stringify(merged));
       loadLog();
       alert("Imported "+incoming.length+" session(s).");
@@ -369,6 +357,35 @@ importFile.addEventListener("change", function(){
   reader.readAsText(file);
   this.value="";
 });
+
+/* ===== Print: current view ===== */
+var printBtn = document.getElementById("printView");
+if (printBtn) {
+  printBtn.addEventListener("click", function () {
+    if (!spiralCard.hidden) { renderSpiral(); } else { renderMatrix(); }
+    window.print();
+  });
+}
+
+/* ===== Print: Matrix one-click ===== */
+var printMatrixBtn = document.getElementById("printMatrix");
+if (printMatrixBtn) {
+  printMatrixBtn.addEventListener("click", function () {
+    toggle(false);
+    renderMatrix();
+    setTimeout(function(){ window.print(); }, 150);
+  });
+}
+
+/* ===== Auto-print via URL ===== */
+(function(){
+  var u = new URL(location.href);
+  var wantPrint = u.searchParams.get("print");
+  var wantView  = (u.searchParams.get("view")||"").toLowerCase();
+  if (wantView==="matrix"){ toggle(false); renderMatrix(); }
+  else if (wantView==="spiral"){ toggle(true); renderSpiral(); }
+  if (wantPrint==="1"){ setTimeout(function(){ window.print(); },200); }
+})();
 </script>
 </body>
 </html>
