--- a/index.html
+++ b/index.html
@@ -1,201 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>tunes.plnt.earth — Illumina 1</title>
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%230b0b0c'/><circle cx='50' cy='50' r='40' fill='%23e9e9ef'/><circle cx='42' cy='50' r='34' fill='%230b0b0c'/></svg>">
-  <style>
-    :root { --bg:#0b0b0c; --card:#141417; --text:#e9e9ef; --muted:#9a9aab; --accent:#b2f5ea; --ring:#2a2a33; --chip:#23232a; }
-    [data-theme="neon"] { --accent:#00e5ff; --card:#11131a; --chip:#151823; }
-    [data-theme="honey"] { --accent:#ffd166; --card:#1a1511; --chip:#221a13; }
-    *{box-sizing:border-box}
-    body{margin:0;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial;background:var(--bg);color:var(--text)}
-    header{background:var(--card);border-bottom:1px solid var(--ring);position:sticky;top:0;z-index:10}
-    nav{max-width:1200px;margin:0 auto;padding:12px 16px;display:flex;flex-wrap:wrap;gap:16px;align-items:center}
-    nav a{text-decoration:none;color:var(--text);font-size:14px}
-    nav a:hover{color:var(--accent)}
-    .mode{margin-left:auto;display:flex;gap:8px}
-    .btn{display:inline-block;border:1px solid var(--ring);border-radius:10px;padding:6px 10px;color:var(--text);text-decoration:none;background:none;cursor:pointer;font-size:13px}
-    .btn:hover{border-color:var(--accent);color:var(--accent)}
-    main{max-width:1200px;margin:0 auto;padding:20px 16px}
-    .grid{display:grid;grid-template-columns:2fr 1fr;gap:16px}
-    @media (max-width:980px){.grid{grid-template-columns:1fr}}
-    .card{background:var(--card);border:1px solid var(--ring);border-radius:16px;padding:16px;box-shadow:0 8px 20px rgba(0,0,0,.35)}
-    h1{margin:8px 0 4px}
-    .meta{color:var(--muted);margin-bottom:12px}
-    input[type="search"], select{background:#0e0e11;color:var(--text);border:1px solid var(--ring);border-radius:10px;padding:8px 10px;width:100%}
-    .list{display:flex;flex-direction:column;gap:8px;max-height:560px;overflow:auto}
-    .row{display:flex;gap:10px;align-items:center;justify-content:space-between;border:1px solid var(--ring);border-radius:12px;padding:10px 12px;background:var(--chip)}
-    .row .day{font-weight:700;min-width:36px;text-align:center}
-    .row .fig{color:var(--muted);font-size:12px}
-    .row .open{white-space:nowrap;display:flex;gap:8px}
-    iframe{width:100%;aspect-ratio:16/9;border:1px solid var(--ring);border-radius:12px;background:#000}
-    footer{color:var(--muted);text-align:center;padding:20px 0;font-size:13px}
-    .controls{display:flex;gap:8px;flex-wrap:wrap;margin:8px 0}
-    .now{margin-top:8px;color:var(--muted);font-size:12px}
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Tunes · Illumina 1 Playlist (Public)</title>
+<meta name="theme-color" content="#0B0F19">
+<meta name="description" content="Illumina 1 public playlist. YouTube canonical; Apple Music and Spotify mirrors coming soon.">
+<style>
+  :root{
+    --bg:#0B0F19;--ink:#E5E7EB;--muted:#9CA3AF;--line:rgba(229,231,235,.15);
+    --gold:#F5D142;--amber:#F59E0B;--ok:#34D399;--warn:#FBBF24;--err:#F87171;
+    --r:14px;--pad:18px;--maxw:1100px;
+  }
+  *{box-sizing:border-box}
+  html,body{height:100%}
+  body{margin:0;background:var(--bg);color:var(--ink);font:15px/1.55 ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
+  a{color:var(--gold);text-decoration:none}
+  a:hover{text-decoration:underline}
+  .wrap{max-width:var(--maxw);margin:0 auto;padding:clamp(14px,3.5vw,28px)}
+  header{display:grid;gap:8px;margin:6px 0 18px}
+  h1{margin:0;font-size:clamp(22px,4.5vw,34px);line-height:1.2}
+  .muted{color:var(--muted)}
+  .bar{display:flex;flex-wrap:wrap;gap:8px;align-items:center}
+  .pill{border:1px solid var(--line);border-radius:999px;padding:6px 10px;color:var(--muted);font-size:13px}
+  .btn{border:1px solid var(--line);border-radius:999px;padding:8px 12px;background:rgba(255,255,255,.02);color:var(--ink)}
+  .btn.primary{border-color:var(--amber);background:linear-gradient(180deg,rgba(245,209,66,.15),rgba(245,158,11,.12))}
+  input[type="text"], select{
+    padding:10px 12px;border:1px solid var(--line);border-radius:999px;background:rgba(255,255,255,.02);color:var(--ink);font:inherit;
+  }
+  .grid{display:grid;gap:12px}
+  .cards{grid-template-columns:1fr}
+  @media (min-width:840px){.cards{grid-template-columns:1fr 1fr}}
+  .card{border:1px solid var(--line);border-radius:var(--r);padding:var(--pad);background:linear-gradient(180deg,rgba(255,255,255,.02),rgba(255,255,255,0))}
+  .row{display:flex;gap:8px;flex-wrap:wrap;align-items:center}
+  .mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace}
+  .tag{font-size:12px;color:#cfd3db;border:1px dashed var(--line);border-radius:8px;padding:2px 8px}
+  .title{font-size:17px;font-weight:700;line-height:1.25}
+  .artist{opacity:.9}
+  .meta{display:grid;gap:8px;margin-top:8px}
+  .platforms{display:flex;gap:8px;flex-wrap:wrap;margin-top:6px}
+  .play{display:inline-flex;align-items:center;gap:8px;border:1px solid var(--line);border-radius:10px;padding:8px 12px;background:rgba(255,255,255,.03)}
+  .badge{font-size:12px;color:var(--muted);border:1px solid var(--line);border-radius:999px;padding:4px 8px}
+  .ok{color:var(--ok)} .warn{color:var(--warn)} .err{color:var(--err)}
+  footer{margin:24px 0 8px;color:var(--muted);font-size:13px;text-align:center}
+</style>
 </head>
 <body>
+<div class="wrap">
   <header>
-    <nav>
-      <a href="/">Tunes</a>
-      <a href="https://jar.plnt.earth/calendar/illumina1/" target="_blank">Jar Calendar ↗</a>
-      <a href="https://jar.plnt.earth/pantheon/" target="_blank">Pantheon ↗</a>
-      <a href="https://jar.plnt.earth/references/" target="_blank">References ↗</a>
-      <a href="https://youtube.com/playlist?list=PL2H7n7qLAdf7VTOrmFlY9G-PaE94VrHAY&si=vblXKmAvTj-Ve5iV" target="_blank">Playlist ↗</a>
-      <div class="mode">
-        <button class="btn" data-set-theme="classic">Classic</button>
-        <button class="btn" data-set-theme="neon">Neon</button>
-        <button class="btn" data-set-theme="honey">Honey</button>
-      </div>
-    </nav>
+    <h1>Illumina 1 — Public Playlist</h1>
+    <div class="bar">
+      <span id="cycle" class="pill">Loading…</span>
+      <label class="pill" for="search">Search</label>
+      <input id="search" type="text" placeholder="Title, artist, figure…">
+      <select id="dayJump" aria-label="Jump to day"><option value="">Jump to day…</option></select>
+      <button id="toggleMissing" class="btn" type="button">Show only missing YouTube</button>
+      <button id="reload" class="btn" type="button">Reload</button>
+      <span id="stat" class="pill">—</span>
+    </div>
+    <p class="muted">YouTube is the canonical public playlist. Apple Music / Spotify mirrors coming soon.</p>
   </header>
 
-  <main>
-    <h1>Illumina 1 — Tunes</h1>
-    <div class="meta">YouTube playlist + daily tracks. Use the list to jump; use Jar for full day context.</div>
+  <section id="cards" class="grid cards" aria-live="polite"></section>
 
-    <div class="grid">
-      <div class="card">
-        <div id="player"></div>
-        <div id="now" class="now"></div>
-      </div>
-      <div class="card">
-        <div class="controls">
-          <input id="q" type="search" placeholder="Search track / figure…" />
-          <select id="fig"></select>
-        </div>
-        <div class="list" id="list"></div>
-      </div>
-    </div>
-  </main>
+  <footer>
+    <p>PLNT Earth · Illumina — Tunes</p>
+    <p class="muted">Source JSON: <span class="mono" id="srcLabel">/Illumina1_Playlist_YT_Apple_Spotify.json</span></p>
+  </footer>
+</div>
 
-  <footer>© tunes.plnt.earth</footer>
+<script>
+(function(){
+  var q = new URLSearchParams(location.search);
+  var src = q.get('src') || '/Illumina1_Playlist_YT_Apple_Spotify.json';
+  var data = null, filtered = false, term = '';
+  var elCards = document.getElementById('cards');
+  var elCycle = document.getElementById('cycle');
+  var elStat = document.getElementById('stat');
+  var elSearch = document.getElementById('search');
+  var elMissing = document.getElementById('toggleMissing');
+  var elReload = document.getElementById('reload');
+  var elDayJump = document.getElementById('dayJump');
+  var elSrcLabel = document.getElementById('srcLabel');
+  elSrcLabel.textContent = src;
 
-  <script>
-    const DATA_URL = "/data/illumina1.json"; // place the JSON in this repo under /data/
-    const PLAYLIST = "https://www.youtube.com/embed/videoseries?list=PL2H7n7qLAdf7VTOrmFlY9G-PaE94VrHAY";
-    const JAR = "https://jar.plnt.earth";
-    const THEME_KEY = "tunes:theme";
+  function setStat(t){ elStat.textContent = t; }
+  function safe(v){ return v==null ? "" : String(v); }
+  function hasYouTube(it){
+    return !!(it.Platforms && it.Platforms.YouTube && it.Platforms.YouTube.url);
+  }
+  function validYT(u){
+    if(!u) return false;
+    var s = String(u).trim();
+    if(!/^https?:\/\//i.test(s)) return false;
+    if(!/youtube\.com|youtu\.be/i.test(s)) return false;
+    return true;
+  }
+  function match(it){
+    if(!term) return true;
+    var t = term.toLowerCase();
+    return (
+      safe(it.Track && it.Track.title).toLowerCase().indexOf(t)>-1 ||
+      safe(it.Track && it.Track.artist).toLowerCase().indexOf(t)>-1 ||
+      safe(it.Figure).toLowerCase().indexOf(t)>-1 ||
+      safe(it.SeedRitual).toLowerCase().indexOf(t)>-1
+    );
+  }
 
-    function ytid(url){
-      try{
-        if(!url) return null;
-        const u = new URL(url);
-        if(u.hostname.includes("youtube.com")){
-          const v = u.searchParams.get("v");
-          if(v) return v;
-          return null;
-        }
-        if(u.hostname.includes("youtu.be")){
-          const parts = u.pathname.split("/").filter(Boolean);
-          return parts[0] || null;
-        }
-      }catch(e){}
-      return null;
+  function render(){
+    if(!data || !data.Playlist){ elCards.innerHTML=''; elCycle.textContent='No data'; return; }
+    var list = data.Playlist.slice();
+    var total = list.length;
+    var missing = 0, warn = 0, ok = 0;
+
+    var rows = [];
+    for(var i=0;i<list.length;i++){
+      var it = list[i];
+      if(filtered && hasYouTube(it)) continue;
+      if(!match(it)) continue;
+
+      var d = safe(it.Day), date = safe(it.Date);
+      var title = safe(it.Track && it.Track.title);
+      var artist = safe(it.Track && it.Track.artist);
+      var fig = safe(it.Figure);
+      var seed = safe(it.SeedRitual);
+      var yt = safe(it.Platforms && it.Platforms.YouTube && it.Platforms.YouTube.url);
+      var ytOk = validYT(yt);
+      if(!yt) missing++; else if(ytOk) ok++; else warn++;
+
+      rows.push(
+        '<article class="card" id="day-'+d+'">'+
+          '<div class="row"><span class="tag">Day '+d+'</span><span class="tag mono">'+date+'</span></div>'+
+          '<div class="meta">'+
+            '<div class="title">'+title+'</div>'+
+            '<div class="artist">'+artist+'</div>'+
+            (fig?'<div class="muted">Figure: '+fig+'</div>':'')+
+            (seed?'<div class="muted">Seed: '+seed+'</div>':'')+
+            '<div class="platforms">'+
+              (yt ? '<a class="play" href="'+yt+'" target="_blank" rel="noopener">▶︎ Play on YouTube</a>' :
+                    '<span class="badge err">YouTube link missing</span>')+
+              '<span class="badge">Apple Music: coming soon</span>'+
+              '<span class="badge">Spotify: coming soon</span>'+
+            '</div>'+
+            (yt && !ytOk ? '<div class="warn">Please check this YouTube URL.</div>' : '')+
+          '</div>'+
+        '</article>'
+      );
     }
+    elCards.innerHTML = rows.join('');
+    var start = data.Cycle && data.Cycle.Start ? data.Cycle.Start : '—';
+    var end = data.Cycle && data.Cycle.End ? data.Cycle.End : '—';
+    elCycle.textContent = 'Cycle: '+start+' → '+end+' · Days: '+total;
+    setStat('OK: '+ok+' · Missing: '+missing+' · Check: '+warn);
+  }
 
-    function embedPlayer(videoId, label){
-      const wrap = document.getElementById("player");
-      const iframe = document.createElement("iframe");
-      iframe.setAttribute("allowfullscreen","");
-      iframe.setAttribute("title","YouTube player");
-      iframe.src = videoId ? ("https://www.youtube.com/embed/" + videoId) : PLAYLIST;
-      wrap.innerHTML = "";
-      wrap.appendChild(iframe);
-      document.getElementById("now").textContent = label || (videoId ? "" : "Playing: Playlist");
+  function buildDayJump(){
+    if(!data || !data.Playlist) return;
+    var opts = ['<option value="">Jump to day…</option>'];
+    for(var i=0;i<data.Playlist.length;i++){
+      var d = data.Playlist[i].Day || (i+1);
+      opts.push('<option value="'+d+'">Day '+d+'</option>');
     }
+    elDayJump.innerHTML = opts.join('');
+  }
 
-    function populateFigures(data){
-      const sel = document.getElementById("fig");
-      sel.innerHTML = "";
-      const o0 = document.createElement("option"); o0.value=""; o0.textContent="All figures"; sel.appendChild(o0);
-      Array.from(new Set(data.map(d=>d.Figure).filter(Boolean))).sort().forEach(f=>{
-        const o = document.createElement("option"); o.value=f; o.textContent=f; sel.appendChild(o);
-      });
-    }
+  function jumpTo(day){
+    var el = document.getElementById('day-'+day);
+    if(!el) return;
+    el.scrollIntoView({behavior:'smooth', block:'start'});
+  }
 
-    function renderList(data){
-      const q = (document.getElementById("q").value||"").toLowerCase();
-      const fig = document.getElementById("fig").value;
-      const box = document.getElementById("list");
-      const filtered = data.filter(d=>{
-        const hay = (String(d.Track) + " " + String(d.Figure)).toLowerCase();
-        const okQ = !q || hay.indexOf(q) !== -1;
-        const okF = !fig || d.Figure===fig;
-        return okQ && okF;
-      }).sort((a,b)=>a.Day-b.Day);
-      box.innerHTML = "";
-      filtered.forEach(d=>{
-        const row = document.createElement("div"); row.className="row";
-        row.innerHTML = '<div class="day">'+d.Day+'</div>' +
-          '<div><div>'+d.Track+'</div><div class="fig">'+(d.Figure||"")+'</div></div>' +
-          '<div class="open">' +
-            '<a class="btn" href="#" data-day="'+d.Day+'">Play</a>' +
-            '<a class="btn" href="'+JAR+'/day/?n='+d.Day+'" target="_blank">Open Day ↗</a>' +
-          '</div>';
-        row.querySelector('a[data-day]').addEventListener('click', (ev)=>{
-          ev.preventDefault();
-          const id = ytid(d.URL);
-          embedPlayer(id, "Playing: Day "+d.Day+" — "+d.Track);
-          history.replaceState(null, "", "?n="+d.Day);
-        });
-        box.appendChild(row);
-      });
-    }
+  function load(){
+    setStat('Loading…');
+    fetch(src, {cache:'no-store'}).then(function(r){
+      if(!r.ok) throw new Error('Load failed');
+      return r.json();
+    }).then(function(json){
+      data = json;
+      buildDayJump();
+      render();
+      setStat('Loaded');
+    }).catch(function(){
+      setStat('Could not load JSON');
+      elCards.innerHTML = '';
+      elCycle.textContent = 'Load error';
+    });
+  }
 
-    function applyTheme(theme){
-      const root = document.documentElement;
-      if(theme && theme !== "classic"){
-        root.setAttribute("data-theme", theme);
-      }else{
-        root.removeAttribute("data-theme");
-        theme = "classic";
-      }
-      try{ localStorage.setItem(THEME_KEY, theme); }catch(e){}
-    }
+  elSearch.addEventListener('input', function(){ term = this.value.trim(); render(); });
+  elMissing.addEventListener('click', function(){
+    filtered = !filtered;
+    this.textContent = filtered ? 'Show all' : 'Show only missing YouTube';
+    render();
+  });
+  elReload.addEventListener('click', load);
+  elDayJump.addEventListener('change', function(){ if(this.value) jumpTo(this.value); });
 
-    async function boot(){
-      // Theme: restore + buttons
-      try{
-        const saved = localStorage.getItem(THEME_KEY);
-        if(saved) applyTheme(saved);
-      }catch(e){}
-      document.querySelectorAll("[data-set-theme]").forEach(btn=>{
-        btn.addEventListener("click", ()=>applyTheme(btn.getAttribute("data-set-theme")));
-      });
-
-      // Load data
-      try{
-        const res = await fetch(DATA_URL);
-        const data = await res.json();
-        populateFigures(data);
-        renderList(data);
-        // Deep-link support
-        const qp = new URLSearchParams(location.search);
-        const v = qp.get("v");
-        const n = parseInt(qp.get("n")||"", 10);
-        const fig = qp.get("fig");
-        const q = qp.get("q");
-        if(fig){ document.getElementById("fig").value = fig; }
-        if(q){ document.getElementById("q").value = q; }
-        if(v){
-          embedPlayer(v, "Playing: custom video");
-        }else if(!isNaN(n)){
-          const entry = data.find(d => +d.Day === n);
-          const id = entry ? ytid(entry.URL) : null;
-          embedPlayer(id, entry ? ("Playing: Day "+entry.Day+" — "+entry.Track) : null);
-        }else{
-          embedPlayer(null);
-        }
-        document.getElementById("q").addEventListener("input", ()=>renderList(data));
-        document.getElementById("fig").addEventListener("change", ()=>renderList(data));
-      }catch(e){
-        document.getElementById("player").textContent = "Error loading /data/illumina1.json";
-      }
-    }
-    boot();
-  </script>
+  load();
+})();
+</script>
 </body>
 </html>
