--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Tunes · Illumina 1 Playlist (Public)</title>
+<title>Tunes · Illumina 1 (Public)</title>
 <meta name="theme-color" content="#0B0F19">
-<meta name="description" content="Illumina 1 public playlist. YouTube canonical; Apple Music and Spotify mirrors coming soon.">
+<meta name="description" content="Illumina 1 playlist. YouTube canonical; Apple Music and Spotify shown when available.">
 <style>
   :root{
     --bg:#0B0F19;--ink:#E5E7EB;--muted:#9CA3AF;--line:rgba(229,231,235,.15);
@@ -43,37 +43,45 @@
   .badge{font-size:12px;color:var(--muted);border:1px solid var(--line);border-radius:999px;padding:4px 8px}
   .ok{color:var(--ok)} .warn{color:var(--warn)} .err{color:var(--err)}
   footer{margin:24px 0 8px;color:var(--muted);font-size:13px;text-align:center}
+  .lane{border:1px dashed var(--line);border-radius:999px;padding:6px 10px;color:#cfd3db}
 </style>
 </head>
 <body>
 <div class="wrap">
   <header>
-    <h1>Illumina 1 — Public Playlist</h1>
+    <h1>Illumina 1 — Public Tunes</h1>
     <div class="bar">
       <span id="cycle" class="pill">Loading…</span>
+      <label class="pill" for="lane">Lane</label>
+      <select id="lane" aria-label="Choose playlist lane">
+        <option value="Explainer">Explainer</option>
+        <option value="AnchorPublic">AnchorPublic</option>
+        <option value="AnchorBuilt">AnchorBuilt</option>
+      </select>
       <label class="pill" for="search">Search</label>
-      <input id="search" type="text" placeholder="Title, artist, figure…">
+      <input id="search" type="text" placeholder="Title, artist, figure, seed…">
       <select id="dayJump" aria-label="Jump to day"><option value="">Jump to day…</option></select>
       <button id="toggleMissing" class="btn" type="button">Show only missing YouTube</button>
       <button id="reload" class="btn" type="button">Reload</button>
       <span id="stat" class="pill">—</span>
     </div>
-    <p class="muted">YouTube is the canonical public playlist. Apple Music / Spotify mirrors coming soon.</p>
+    <p class="muted">YouTube is canonical. Apple Music / Spotify shown when available.</p>
   </header>
 
   <section id="cards" class="grid cards" aria-live="polite"></section>
 
   <footer>
     <p>PLNT Earth · Illumina — Tunes</p>
-    <p class="muted">Source JSON: <span class="mono" id="srcLabel">/Illumina1_Playlist_YT_Apple_Spotify.json</span></p>
+    <p class="muted">Source JSON: <span class="mono" id="srcLabel">/Illumina1_Playlist_MASTER_3in1.json</span> · Lane: <span id="laneLabel" class="lane">Explainer</span></p>
   </footer>
 </div>
 
 <script>
 (function(){
   var q = new URLSearchParams(location.search);
-  var src = q.get('src') || '/Illumina1_Playlist_YT_Apple_Spotify.json';
+  var src = q.get('src') || '/Illumina1_Playlist_MASTER_3in1.json';
   var data = null, filtered = false, term = '';
+  var curLane = q.get('lane') || 'Explainer';
   var elCards = document.getElementById('cards');
   var elCycle = document.getElementById('cycle');
   var elStat = document.getElementById('stat');
@@ -81,14 +89,16 @@
   var elMissing = document.getElementById('toggleMissing');
   var elReload = document.getElementById('reload');
   var elDayJump = document.getElementById('dayJump');
+  var elLaneSel = document.getElementById('lane');
+  var elLaneLabel = document.getElementById('laneLabel');
   var elSrcLabel = document.getElementById('srcLabel');
   elSrcLabel.textContent = src;
+  elLaneSel.value = curLane;
+  elLaneLabel.textContent = curLane;
 
   function setStat(t){ elStat.textContent = t; }
   function safe(v){ return v==null ? "" : String(v); }
-  function hasYouTube(it){
-    return !!(it.Platforms && it.Platforms.YouTube && it.Platforms.YouTube.url);
-  }
+  function hasYouTube(pl){ return !!(pl && pl.Platforms && pl.Platforms.YouTube && pl.Platforms.YouTube.url); }
   function validYT(u){
     if(!u) return false;
     var s = String(u).trim();
@@ -96,51 +106,58 @@
     if(!/youtube\.com|youtu\.be/i.test(s)) return false;
     return true;
   }
-  function match(it){
+  function appleHref(platforms, title, artist){
+    var p = platforms && platforms.AppleMusic;
+    if(p && p.id){ return 'https://music.apple.com/us/album/'+encodeURIComponent(p.id); }
+    // fallback search
+    var q = encodeURIComponent((title||'') + ' ' + (artist||''));
+    return 'https://music.apple.com/us/search?term='+q;
+  }
+  function spotifyHref(platforms, title, artist){
+    var p = platforms && platforms.Spotify;
+    if(p && p.id){ return 'https://open.spotify.com/track/'+encodeURIComponent(p.id); }
+    // fallback search
+    var q = encodeURIComponent((title||'') + ' ' + (artist||''));
+    return 'https://open.spotify.com/search/'+q;
+  }
+  function matchRow(row){
     if(!term) return true;
     var t = term.toLowerCase();
     return (
-      safe(it.Track && it.Track.title).toLowerCase().indexOf(t)>-1 ||
-      safe(it.Track && it.Track.artist).toLowerCase().indexOf(t)>-1 ||
-      safe(it.Figure).toLowerCase().indexOf(t)>-1 ||
-      safe(it.SeedRitual).toLowerCase().indexOf(t)>-1
+      (row.title||'').toLowerCase().indexOf(t)>-1 ||
+      (row.artist||'').toLowerCase().indexOf(t)>-1
     );
   }
-
   function render(){
-    if(!data || !data.Playlist){ elCards.innerHTML=''; elCycle.textContent='No data'; return; }
-    var list = data.Playlist.slice();
+    if(!data || !data.PerDay){ elCards.innerHTML=''; elCycle.textContent='No data'; return; }
+    var list = data.PerDay.slice();
     var total = list.length;
     var missing = 0, warn = 0, ok = 0;
 
     var rows = [];
     for(var i=0;i<list.length;i++){
-      var it = list[i];
-      if(filtered && hasYouTube(it)) continue;
-      if(!match(it)) continue;
+      var day = list[i].Day, date = list[i].Date;
+      var lane = list[i][curLane] || {};
+      if(!matchRow(lane)) continue;
 
-      var d = safe(it.Day), date = safe(it.Date);
-      var title = safe(it.Track && it.Track.title);
-      var artist = safe(it.Track && it.Track.artist);
-      var fig = safe(it.Figure);
-      var seed = safe(it.SeedRitual);
-      var yt = safe(it.Platforms && it.Platforms.YouTube && it.Platforms.YouTube.url);
+      var title = safe(lane.title), artist = safe(lane.artist);
+      var pf = lane.Platforms || {};
+      var yt = safe(pf.YouTube && pf.YouTube.url);
       var ytOk = validYT(yt);
+      if(filtered && yt) continue;
       if(!yt) missing++; else if(ytOk) ok++; else warn++;
 
       rows.push(
-        '<article class="card" id="day-'+d+'">'+
-          '<div class="row"><span class="tag">Day '+d+'</span><span class="tag mono">'+date+'</span></div>'+
+        '<article class="card" id="day-'+day+'">'+
+          '<div class="row"><span class="tag">Day '+day+'</span><span class="tag mono">'+date+'</span><span class="tag">'+curLane+'</span></div>'+
           '<div class="meta">'+
             '<div class="title">'+title+'</div>'+
             '<div class="artist">'+artist+'</div>'+
-            (fig?'<div class="muted">Figure: '+fig+'</div>':'')+
-            (seed?'<div class="muted">Seed: '+seed+'</div>':'')+
             '<div class="platforms">'+
               (yt ? '<a class="play" href="'+yt+'" target="_blank" rel="noopener">▶︎ Play on YouTube</a>' :
                     '<span class="badge err">YouTube link missing</span>')+
-              '<span class="badge">Apple Music: coming soon</span>'+
-              '<span class="badge">Spotify: coming soon</span>'+
+              '<a class="play" href="'+appleHref(pf, title, artist)+'" target="_blank" rel="noopener"> Apple Music'+((pf.AppleMusic&&pf.AppleMusic.status==='exists')?'':' (search)')+'</a>'+
+              '<a class="play" href="'+spotifyHref(pf, title, artist)+'" target="_blank" rel="noopener">Spotify'+((pf.Spotify&&pf.Spotify.id)?'':' (search)')+'</a>'+
             '</div>'+
             (yt && !ytOk ? '<div class="warn">Please check this YouTube URL.</div>' : '')+
           '</div>'+
@@ -153,23 +170,20 @@
     elCycle.textContent = 'Cycle: '+start+' → '+end+' · Days: '+total;
     setStat('OK: '+ok+' · Missing: '+missing+' · Check: '+warn);
   }
-
   function buildDayJump(){
-    if(!data || !data.Playlist) return;
+    if(!data || !data.PerDay) return;
     var opts = ['<option value="">Jump to day…</option>'];
-    for(var i=0;i<data.Playlist.length;i++){
-      var d = data.Playlist[i].Day || (i+1);
+    for(var i=0;i<data.PerDay.length;i++){
+      var d = data.PerDay[i].Day || (i+1);
       opts.push('<option value="'+d+'">Day '+d+'</option>');
     }
     elDayJump.innerHTML = opts.join('');
   }
-
   function jumpTo(day){
     var el = document.getElementById('day-'+day);
     if(!el) return;
     el.scrollIntoView({behavior:'smooth', block:'start'});
   }
-
   function load(){
     setStat('Loading…');
     fetch(src, {cache:'no-store'}).then(function(r){
@@ -195,6 +209,9 @@
   });
   elReload.addEventListener('click', load);
   elDayJump.addEventListener('change', function(){ if(this.value) jumpTo(this.value); });
+  elLaneSel.addEventListener('change', function(){
+    curLane = this.value; elLaneLabel.textContent = curLane; render();
+  });
 
   load();
 })();
